# rag-db-advisor

./: CHANGELOG.md  README.md  pyproject.toml
docs/: adding-knowledge.md  methodology.md
src/rag_db_advisor/: advisor.py  cli.py  knowledge.py  mcp_server.py  store.py
src/rag_db_advisor/knowledge/ja/: chroma.md  clickhouse.md  cross-cutting.md  lancedb.md  milvus.md  pgvector.md  qdrant.md  weaviate.md
tests/: test_cli.py  test_knowledge.py  test_mcp_server.py  test_store.py
