[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-db-advisor"
version = "0.1.0"
description = "A RAG that answers RAG-stack questions — every claim backed by rag-retriever-bench measurements, served over MCP or CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ken imoto" }]
keywords = ["rag", "vector-search", "mcp", "advisor", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "numpy>=1.26",
    "openai>=1.40",
    "chromadb>=0.5",
    "mcp>=1.2",
    # The retrieval layer IS the benchmark's abstraction (dogfooding):
    # evaluated interface in, winning backend out. Pinned to a tag so a
    # breaking change on the bench's main can't break installs here.
    "rag-retriever-bench @ git+https://github.com/kenimo49/rag-retriever-bench@v0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
rag-db-advisor = "rag_db_advisor.cli:main"

[project.urls]
Repository = "https://github.com/kenimo49/rag-db-advisor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rag_db_advisor = ["knowledge/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
